Add subproject that contains the patchfiles as a regular library
Currently the patchfiles are copied into the source of each generated
parser, even though they are identical for all parsers and always use
a hardcoded package name. This means that all generated parsers
actually have conflicting classes, although in practice it's not
noticeable, because the classes are always identical.

This does however cause issues if the patchfiles are ever updated
(because then there could be multiple *different* copies of the same
classes on the classpath) and is incompatible with the Java 9+ module
system (which does not allow different modules to use the same package
name).

To fix these issues, the patchfiles will now be provided as a separate
runtime library, and in the future they will no longer be copied into
each generated parser.

--- a/sablecc-runtime/build.gradle
+++ b/sablecc-runtime/build.gradle
@@ -1,29 +1,6 @@
-apply plugin: 'application'
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-
-wrapper {
-  gradleVersion = "5.4"
-  distributionType = Wrapper.DistributionType.ALL
+plugins {
+  id "java-library"
 }
-
-allprojects {
-  project.group = 'de.hhu.stups'
-  project.version = '3.2.14-SNAPSHOT'
-  
-  sourceCompatibility = 1.6
-  targetCompatibility = 1.6
-}
-
-project.archivesBaseName = "sablecc"
-
-repositories {
-  mavenLocal()
-  jcenter()
-}
-
-mainClassName = "org.sablecc.sablecc.SableCC"
 
 task javadocJar(type: Jar) {
   archiveClassifier.set("javadoc")
@@ -35,41 +12,14 @@ task sourcesJar(type: Jar) {
   from sourceSets.main.allSource
 }
 
-jar {
-  manifest {
-    attributes 'Main-Class': mainClassName
-  }
-}
-
 artifacts {
   archives javadocJar, sourcesJar
 }
 
-task writeVersion() {
-
-  doFirst {
-    def buildconstants_class = """
-package org.sablecc.sablecc;
-
-public class Version
-{
-  public static final String VERSION = "${project.version}";
-}
-"""
-    File f = file("src/main/java/org/sablecc/sablecc/Version.java")
-    f.delete()
-    f <<  buildconstants_class
-  }
-}
-
-compileJava {
-  dependsOn = ['writeVersion']
-}
-
 if (project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword')) {
-
+  
   apply plugin: 'signing'
-
+  
   signing {
     sign configurations.archives
   }
@@ -77,36 +27,36 @@ if (project.hasProperty('ossrhUsername') && project.hasProperty('ossrhPassword')
     repositories {
       mavenDeployer {
         beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
+        
         repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
           authentication(userName: ossrhUsername, password: ossrhPassword)
         }
-
+        
         snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
           authentication(userName: ossrhUsername, password: ossrhPassword)
         }
-
+        
         pom.project {
-          name 'SableCC - Stups fork'
+          name 'SableCC - Stups fork (runtime library)'
           packaging 'jar'
           // optionally artifactId can be defined here
-          description 'This version of SableCC enriches the abstract syntax tree with information about tokens.'
+          description 'This is the runtime support library for the Stups fork of SableCC. It provides common classes and interfaces used by the generated parsers at runtime.'
           url 'https://github.com/bendisposto/sablecc-stups'
-
+          
           licenses {
             license {
               name 'GNU Lesser General Public License, Version 2.1'
               url 'http://www.gnu.org/licenses/lgpl-2.1.html'
             }
           }
-
+          
           scm {
             connection 'scm:git:git://github.com/bendisposto/sablecc-stups.git'
             developerConnection 'scm:git:git@github.com:bendisposto/sablecc-stups.git'
             url 'https://github.com/bendisposto/sablecc-stups'
           }
-
-
+          
+          
           developers {
             developer {
               id 'bendisposto'
